add console controller and task service implementations, change java version to 21

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 java {
-    sourceCompatibility = 24
-    targetCompatibility = 24
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 }
 group = 'com.balza'
 version = '1.0-SNAPSHOT'
